# quasar

./: .gitignore  README.md  backend.Dockerfile  debug_openai.py  docker-compose.yml  frontend.Dockerfile  nginx.conf  pyproject.toml
app/: main.py
app/agent/: chains.py  graph.py  nodes.py
app/api/v1/: chat.py
app/core/: config.py
app/services/: retrieval.py  storage.py
data_ingestion/: chunking.py  ingest.py  ingest_all_types.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
notebooks/: debug_rag_pipeline.ipynb
scripts/: run_evaluation.py
tests/: test_agent.py  test_api.py
